--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,14 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'org.mockito:mockito-inline:4.6.1'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
+
 test {
     useJUnitPlatform()
+    include 'unit/**'
 }
