--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'com.ntnn'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,8 +10,20 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.mockito:mockito-inline:4.6.1'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    implementation 'com.lmax:disruptor:4.0.0'
+    implementation "org.apache.logging.log4j:log4j-api:2.23.1"
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.23.1"
+    implementation "org.json:json:20240303"
+    implementation "ch.qos.logback:logback-classic:0.1.5"
+    implementation "ch.qos.logback.contrib:logback-json-classic:0.1.5"
+    implementation "ch.qos.logback.contrib:logback-jackson:0.1.5"
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
